# python-monorepo-101

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: test_api.py  test_core.py  test_utils.py
